// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render alert mode 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  type="button"
>
  title
</button>
`;

exports[`Button should render danger mode 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  type="button"
>
  title
</button>
`;

exports[`Button should render info mode 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  type="button"
>
  title
</button>
`;

exports[`Button should render light-danger mode with size xl not checked with fixed value 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  fixedValue={false}
  notChecked={false}
  size="xl"
  type="button"
>
  title
</button>
`;

exports[`Button should render light-primary mode with size lg and loading 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  isLoading={true}
  size="lg"
  type="button"
>
  title
</button>
`;

exports[`Button should render link mode with size sm and disabled and is not lonely 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block disabled pkp-modal-btn-block "
  disabled={true}
  lonely={true}
  size="sm"
  type="button"
>
  title
</button>
`;

exports[`Button should render muted mode with size xs and is not inline 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary "
  disabled={undefined}
  size="xs"
  type="button"
>
  title
</button>
`;

exports[`Button should render primary mode 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  type="button"
>
  title
</button>
`;

exports[`Button should render success mode 1`] = `
<button
  className=" btn pkp-modal-btn secondary pkp-modal-btn-primary block pkp-modal-btn-block "
  disabled={undefined}
  type="button"
>
  title
</button>
`;
